# pd-ocr-synth

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: decision.md
.github/workflows/: ci.yml
docs/: handoff-2026-05-05.md
docs/plans/: 01-dev-tooling.md  02-recipe-schema.md  04-text-transforms.md  05-rendering.md  07-output-recognition.md  11-preview-ui-scoping.md  12-glyph-annotations.md  README.md
docs/roadmap/: 00-bootstrap.md  01-dev-tooling.md  02-recipe-schema.md  03-corpus.md  04-text-transforms.md  05-rendering.md  06-degradation.md  07-output-recognition.md  08-publishing-hf.md  09-detection-mode.md  10-stretch.md  11-preview-ui.md  README.md
docs/specs/: 00-overview.md  01-cli.md  02-recipe-format.md  03-tutorial-writing-a-recipe.md  04-corpus-providers.md  05-text-transforms.md  06-rendering.md  07-degradation.md  08-output-format.md  09-extending.md  10-publishing.md  11-preview-ui.md  12-glyph-annotations-emission.md  13-dev-local-mode-and-deps.md  fonts-gaelic.md  recipe.schema.json
recipes/: gaelic.yaml
recipes/gaelic/textures/aged-paper/: LICENSE.md
scripts/: fetch-fonts-gaelic.sh  generate-paper-textures.py
src/pd_ocr_synth/: __init__.py  __main__.py  audit.py  cli.py  fonts.py  lint.py  recipe_init.py  recipe_search.py  tokenization.py  validation.py
src/pd_ocr_synth/corpus/: __init__.py  cache.py  context.py  exceptions.py  filters.py  http.py  parsers.py  registry.py  runner.py
src/pd_ocr_synth/corpus/providers/: __init__.py  local.py  web.py  wikisource.py
src/pd_ocr_synth/degradation/: __init__.py  builtins.py  pipeline.py
src/pd_ocr_synth/output/: __init__.py  detection.py  recognition.py  snapshot.py
src/pd_ocr_synth/publish/: __init__.py  auth.py  cli_runner.py  commit_message.py  content_sha.py  dataset_card.py  detection.py  hf_hub_transport.py  idempotency.py  orchestrator.py  preflight.py  recognition.py  redaction.py  sdk_transport.py  summary.py  transport.py
src/pd_ocr_synth/recipe/: __init__.py  loader.py  models.py  paths.py
src/pd_ocr_synth/render/: __init__.py  context.py  line.py  page.py  paragraph.py  preview.py  run.py  sample.py  sampling.py  word_crop.py  wrap.py
src/pd_ocr_synth/text_transforms/: __init__.py  builtins.py  pipeline.py  registry.py
tests/: conftest.py  test_audit.py  test_audit_global.py  test_cli.py  test_cli_audit.py  test_cli_clean.py  test_cli_fetch.py  test_cli_lint.py  test_cli_preview.py  test_cli_publish.py  test_cli_publish_render_first.py  test_cli_publish_upload.py  test_cli_render.py  test_cli_render_audit.py  test_cli_render_lines.py  test_cli_render_pages.py  test_cli_render_paragraphs.py  test_corpus_cache.py  test_corpus_filters.py  test_corpus_http.py  test_corpus_local.py  test_corpus_parsers.py  test_corpus_runner.py  test_corpus_web.py  test_corpus_wikisource.py  test_degradation.py  test_fonts.py  test_lint.py  test_output_detection.py  test_output_recognition.py  test_output_snapshot.py  test_package.py  test_publish_auth.py  test_publish_cli_runner.py  test_publish_commit_message.py  test_publish_content_sha.py  test_publish_dataset_card.py  test_publish_detection.py  test_publish_hf_hub_transport.py  test_publish_idempotency.py  (+21 more)
tests/integration/: __init__.py  test_publish_live_hf.py  test_trainer_dataset_contract.py
